--- a/attachments/index.html
+++ b/attachments/index.html
@@ -11,7 +11,7 @@
         location.protocol = 'https';
       }
     </script>
-    <script src="d3/d3.js"></script>
+    <script src="d3/d3.min.js"></script>
   </head>
   <body>
     <h1>Meal Plan Data Grapher</h1>
