--- a/attachments/index.html
+++ b/attachments/index.html
@@ -33,6 +33,7 @@
       <img id="loader" src="loading.gif">
       <p id="response_note"></p>
     </form>
+    <ul id="legend"></ul>
     <script src="script.js"></script>
   </body>
 </html>
